# release-scholar

./: .gitignore  .gitlab-ci.yml  .project-registry.yaml  .release-scholar.toml  .ship-scholar.toml  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  QUICKSTART.md  README.md
.github/workflows/: ci.yml
assets/: demo.tape
demos/: check.tape
src/: archive.rs  commands.rs  config.rs  main.rs  metadata.rs  report.rs  validation.rs  zenodo.rs
src/archive/: checksum.rs  tarball.rs
src/commands/: build.rs  check.rs  init.rs  mirror.rs  publish.rs
src/metadata/: citation.rs  zenodo.rs
src/validation/: citation.rs  files.rs  git.rs  security.rs  size.rs
