[package]
name = "release-scholar"
version = "0.1.0"
edition = "2021"
description = "Validate, audit, and package scholarly software releases for Zenodo/DOI publication"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
git2 = "0.19"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
toml = "0.8"
regex = "1"
colored = "2"
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
dirs = "5"
